--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <link rel="stylesheet" href="css/styles.css">
+  <!-- <link rel="stylesheet" href="css/switch-css.css"> -->
 </head>
 
 <body>
@@ -34,12 +35,25 @@
   <div class="back-side-color"></div>
 
 
-  Dark Mode
-  <input type="checkbox" name="" id="btn">
   <section class="container mt-3">
-    <h2>Social Media Dashboard</h2>
-    <h6 class="opacity">Total Followers: 23,004</h6>
+
     <div class="row">
+
+      <div class="col-md-6">
+        <h2>Social Media Dashboard</h2>
+        <h6 class="opacity">Total Followers: 23,004</h6>
+      </div>
+
+      <div class="col-md-6 position-relative">
+        <div class="switch-box">
+          <hr class="line">
+          <span class="switch-text text-muted">Dark Mode</span>
+          <label class="switch">
+            <input type="checkbox">
+            <span class="slider"></span>
+          </label>
+        </div>
+      </div>
 
       <div class="col-margin col-lg-3">
         <div class="card facebook">
